<resources>
    <string name="app_name">Fysio Tests</string>
    <string name="empty_string">""</string>
    <string name="valid_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789äåö</string>
    <string name="valid_characters_plus_blank">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789äåö</string>
    <string name="done_button">SPARA</string>
    <string name="test_saved_complete">Test completed.</string>
    <string name="test_saved_incomplete">Changes have been saved, but test is <b>NOT</b> completed.</string>
    <string name="app_version">v1.0</string>
    <string name="login_no_account_yet">No account yet? Register</string>
    <string name="copyright">&#169;&#160;2017&#160;pbluedotsoft@gmail.com</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Log in</string>
    <string name="image_description">logo image</string>
    <string name="error_user_registration">Error creating user account. Please try again.</string>
    <string name="failed_login">Login failed. Please try again</string>
    <string name="enter_username">Please enter username"</string>
    <string name="enter_password">Please enter password/repeat password</string>
    <string name="password_no_match">Password/Repeat password do not match</string>
    <string name="user_taken">Error: username already taken</string>
    <string name="title_activity_patients">PatientsActivity</string>
    <string
        name="test_list_help_info"><![CDATA[<h1>Tester sjukgymnastiken/fysioterapin</h1><u>Självskattning</u><br/>EQ5D (ska göras på alla patienter)<br/>VAS (ska göras på alla patienter)<br/>FSS<br/>IPAQ<br/>Borgs ansträngningsskala<br/>Borgs smärtskala<br/><br/><u>Gångtester</u><br/>TUG<br/>6 min gångtest (görs på samtliga patienter som kan gå)<br/><br/><u>Balanstester</u><br/>Bergs balanstest<br/>BDL<br/>IMF<br/><br/><u>Tester rörlighet</u><br/>FSA<br/>Ledstatus<br/><br/><u>Konditionstest</u><br/>Ergometercykeltest (Åstrands)<br/><br/><u>Ryggreumatiska tester</u><br/>BAS-MI<br/>BAS-DAI<br/>BAS-FI<br/>BAS-G<br/><br/><u>Muskeltester</u><br/>TST<br/>Ashworth skalan<br/>Myositstatus<br/>IMF<br/><br/><u>Övriga tester</u><br/>Smärtteckning<br/><br/><br/><b>Obligatoriska tester på reumatiska patienter från Stockholms läns landsting, Västra Götaland och Halland</b><p>6-minuters gångtest<br/>Ergometri cykeltest (Åstrands cykeltest)<br/>Timed stands test<br/>EQ5-D<br/>VAS - trötthet<br/>VAS - smärta<br/><br/>Vid ryggsjukdomar görs även nedanstående test<br/><br/>BASMI<br/>BASFI<br/>BASDAI<br/>BAS-G<br/>Ott i flexion och extension<br/>Thoraxexkursion</p>]]></string>
    <string name="bergs_string_q1"><b>1. Sittande till stående</b>\nInstruktion: <i>Ställ Dig upp. Försök att inte använda händerna som stöd.</i>\nFör att få 2 poäng får patienten göra fler än ett försök i detta moment.</string>
    <string name="bergs_string_q2"><b>2. Stå utan stöd</b>\nInstruktion: <i>Stå i 2 minuter utan stöd.</i>\nFör att få 1 poäng får patienten göra fler än ett försök i detta moment.</string>
    <string name="bergs_string_om_patienten"><b><i>Om patienten kan stå 2 minuter utan stöd: sätt full poäng för ”sitta utan ryggstöd” och fortsätt till uppgift 4.</i></b></string>
    <string name="bergs_string_q3"><b>3. Sitta utan ryggstöd med stöd for fötterna på golv eller pall</b>\nInstruktion: <i>Sitt med korslagda armar i 2 minuter.</i>\nOm patienten inte förstår att han/hon inte ska luta mot ryggstödet bör detta moment utföras där ryggstöd saknas, exempelvis i sängen.</string>
    <string name="bergs_string_q4"><b>4. Stående till sittande</b>\nInstruktion: <i>Sätt Dig.</i></string>
    <string name="bergs_string_q5"><b>5. Från sittande på en stol med armstöd till en annan utan armstöd och vice versa </b>\nUndersökaren placerar en stol med armstöd i 90° vinkel mot en stol utan armstöd eller mot en säng.\nInstruktion: <i>Flytta Dig från stolen med armstöd till stolen utan armstöd/sängen. Använd händerna så lite som möjligt. Flytta dig sedan från stolen (utan armstöd)/sängen till stolen med armstöd.</i>\nOm patienten inte kan flytta sig åt båda hållen kan undersökaren flytta stolen efter den första överflyttningen. Det viktiga är att överflyttningen sker från en stol med armstöd och från en stol utan armstöd/säng.</string>
    <string name="bergs_string_q6"><b>6. Stå utan stöd med slutna ögon\n</b>Instruktion: <i>Blunda och stå stilla i 10 sekunder.</i></string>
    <string name="bergs_string_q7"><b>7. Stå utan stöd med fötterna intill varandra\n</b>Instruktion: <i>Sätt fötterna intill varandra och stå utan stöd.</i></string>
    <string name="bergs_string_q8"><b>8. Sträcka sig framåt med utsträckt arm i stående\n</b>Instruktion: <i>Lyft armen framåt till 90 grader. Sträck ut fingrarna och sträck Dig framåt så långt Du kan.\n</i>Undersökaren fäster eller håller en linjal, alternativt ett papper markerar med noll-läge och 5, 12, 25 cm mot väggen. Noll-läget ska var jäms med långfingrets fingertopp då armen är framsträckt i 90 grader. Fingrarna eller armen får inte nudda vid väggen. Mät på linjalen hur långt fingertoppen når i det mest framsträckta läget. När det är möjligt ska patienten använda båda armarna vid framåtsträckningen för att undvika rotation av bålen.</string>
    <string name="bergs_string_q9"><b>9. Stå och ta  upp föremål från golv\n</b>Instruktion: <i>Ta upp sko/toffel som ligger framför Dina fötter.</i></string>
    <string name="bergs_string_q10"><b>10. Vrida och titta bakåt över vänster och höger axel i stående\n</b>Instruktion: <i>Vrid och titta direkt bakom Dig över vänster axel. Upprepa åt höger.\n</i>För att en bra rotation i hela kroppen kan undersökaren stå bakom patienten och hålla ett föremål som patienten uppmuntras att titta på.</string>
    <string name="bergs_string_q11"><b>11. Vända 360 grader</b>\nInstruktion: <i>Vänd Dig runt ett helt varv. <u>Stanna</u>. Vänd Dig sedan ett helt varv åt andra hållet.</i></string>
    <string name="bergs_string_q12"><b>12. Stå utan stöd och växelvis placera fot på pall</b>\nInstruktion: <i>Sätt växelvis upp en fot i taget på pallen/trappsteget. Fortsätt tills vardera foten har rört vid pallen 4 gånger.</i></string>
    <string name="bergs_string_q13"><b>13. Stå utan stöd med den ena foten framför den andra\n</b>Instruktion: <u>Demonstrera för patienten</u>. <i>Sätt ena foten direkt framför den andra. Om Du inte kan sätta foten direkt framför, försök att sätta foten så långt fram att hälen på Din främre fot är framför den andra fotens tår.</i>\nFör att få 3 poäng måste den främre fotens häl placeras framför den bakre fotens tår och stegets bredd ska vara ungefär som patientens normala stegbredd.</string>
    <string name="bergs_string_q14"><b>14. Stå på ett ben</b>\nInstruktion: <i>Stå på ett ben så länge Du kan utan stöd.</i></string>
    <string name="bergs_manual"><![CDATA[<h1>Bergs balansskala</h1><h2>Instruktion</h2><p>Visa och förklara för patienten före varje moment som han/hon ska utföra. Det är det <b>första försöket</b> som ska poängsättas. Det är därför mycket viktigt att patienten från början får all den information som behövs så att han/hon förstår vad som ska göras. Ge information på ett naturligt sätt och använd den skrivna instruktioner till varje moment endast som utgångspunkt. </p><h2>Poängsättning </h2><p>I många moment ska patienten bibehålla en given ställning under en viss tid. Du ger gradvis en lägre poäng om de olika kriterierna för tid och avstånd inte uppfylls, om patienten kräver tillsyn eller om hon/han tar stöd eller behöver hjälp av en person. Med tillsyn menas att du känner att du måste vara beredd att ge stöd eftersom det finns risk att patienten ska tappa balansen. Med stöd och hjälp menas fysisk kontakt mellan patienten och ett stadigt föremål eller en person. </p><p>Patienten väljer själv vilket ben hon/han vill stå på eller hur långt hon/han vill sträcka sig framåt. Det innebär exempelvis i moment 8 att patienten får noll poäng om hon/han sträcker sig för långt fram och tappar balansen. Patientens insikt om sin förmåga påverkar således utförandet och därigenom poängsättningen. Om du är tveksam vilken poäng som bäst motsvarar det som patienten klarar av ska du alltid välja <b>det lägre alternativet</b>. Det innebär att patienten åtminstone klarar den poängen, men inte den närmast högre.</p><h2>Utrustning</h2><p>- Ett tidtagarur eller en klocka med sekundvisare<br/>- En linjal eller annat föremål (exempelvis baksidan av skattningsformuläret) markerat med ett noll-läge samt 5, 12 och 25 cm<br/>- Sko eller toffel<br/>- Stol i standardhöjd med armstöd samt en stol utan armstöd eller säng<br/>- Ett steg i en trappa eller en pall med motsvarande steghöjd</p><h2>Dokumentation</h2><p>Vid upprepad bedömning är det mycket viktigt att du <b>inte</b> ser resultatet av den tidigare bedömningen. Om du ser den poäng som patienten fått vid en tidigare skattning finns risk att du påverkas i din poängsättning. Under testproceduren markerar du direkt i skattningsformuläret det poäng som motsvarar patientens resultat. För sedan över testresultatet på formuläret för upprepade mätningar.</p>]]></string>
    <string name="bdl_string_q1"><b>1. Stå med fötterna ihop, blundande</b>\nPatienten står med fötterna parallellt, tätt ihop, armarna hängande intill kroppen. Tid tas från det att patienten sluter ögonen. Fötterna får ej flyttas ur position.</string>
    <string name="ipaq_q1">1. Tänk nu på alla de <b>mycket ansträngande</b> aktiviteter du utförde under de <b>senast 7 dagarna. Mycket ansträngande</b> fysisk aktivitet innefattar aktiviteter som upplevs som mycket arbetsamma och får dig att andas mycket kraftigare än normalt. Tänk enbart på de aktiviteter som du utfört under minst 10 minuter i sträck. </string>
    <string name="ipaq_q1a">1a. Under de <b>senaste 7 dagarna</b>, hur många av dessa dagar har du utfört arbete som är <b>mycket ansträngande</b> såsom tunga lyft, tyngre bygg- och trädgårdsarbete, aerobics, löpning eller cykling i högre tempo?</string>
    <string name="ipaq_q1b">1b. Hur mycket tid tillbringade du, i genomsnitt under en sådan dag, på <b>mycket ansträngande</b> fysisk aktivitet?</string>
    <string name="ipaq_q2">2. Tänk nu på alla de <b>måttligt ansträngande</b> aktiviteter du utförde under de <b>senaste 7 dagarna. Måttligt ansträngande</b> fysisk aktivitet innefattar aktiviteter som upplevs som arbetsamma och får dig att andas något kraftigare än normalt. Tänk enbart på de aktiviteter som du utfört under minst 10 minuter i sträck.</string>
    <string name="ipaq_q2a">2a. Under de senaste <b>7 dagarna</b>, hur många av dessa dagar har du utfört arbete som är <b>måttligt ansträngande</b> såsom cykling, simning, måttligt bygg- och trädgårdsarbete eller annat i måttligt tempo? Inkludera ej promenader. </string>
    <string name="ipaq_q2b">2b. Hur mycket tid tillbringade du, i genomsnitt under en sådan dag, på <b>måttligt ansträngande</b> aktivitet?</string>
    <string name="ipaq_q3">3. Tänk nu på all tid du <b>promenerat</b> under de <b>senaste 7 dagarna</b>. Detta inkluderar promenader på arbetet, under transporter och under fritiden. </string>
    <string name="ipaq_q3a">3a. Under de <b>senaste 7 dagarna</b>, hur många dagar har du <b>promenerat</b> i minst 10 minuter i sträck?</string>
    <string name="ipaq_q3b">3b. Hur mycket tid per dag tillbringade du, i genomsnitt en sådan dag, på <b>promenader</b>?</string>
    <string name="ipaq_q4">4. Tänk ny på den tid som du tillbringat <b>sittande</b> under en typisk dag, de <b>senaste 7 dagarna</b>, i samband med arbete, studier, transporter, i hemmet och på din fritid. Exempelvis tid vid skrivbordet, hemma hos vänner eller i TV-soffan.\n\nUnder de <b>senaste 7 dagarna</b>, hur mycket tid har du tillbringat <b>sittande</b> under en sådan dag?</string>
</resources>