<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/blue_grey_900"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="64dp"
            android:background="@color/blue_grey_900"
            tools:context=".LoginActivity">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_message_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@android:color/white"
                tools:text="login message output" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_message_output"
                android:layout_marginTop="24dp"
                android:background="@color/blue_grey_100"
                android:digits="@string/valid_characters"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_username"
                android:inputType="textFilter"
                android:maxLength="12"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_username"
                android:layout_marginTop="26dp"
                android:background="@color/blue_grey_100"
                android:digits="@string/valid_characters"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginTop="26dp"
                android:background="@drawable/button_spara"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_register_clickable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="32dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/login_no_account_yet"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_register_clickable_text"
                android:layout_marginTop="120dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/copyright"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/blue_grey_400" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="v1.0"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/blue_grey_400" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>