<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_in"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            tools:context="com.pbluedotsoft.fysio.TestActivity">

    <LinearLayout
        android:id="@+id/tst_layout_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <!-- Q1 -->
        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ipaq_q1"/>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q1a"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_dagar_q1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="dagar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q1a"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ingen sådan aktivitet (hoppa över fråga 1b)"/>
        </LinearLayout>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q1b"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_minuter_q1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="minuter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q1b"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Vet ej"/>
        </LinearLayout>

        <!-- Q2 -->
        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q2"/>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q2a"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_dagar_q2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="dagar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q2a"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ingen sådan aktivitet (hoppa över fråga 2b)"/>
        </LinearLayout>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q2b"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_timmar_q2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="timmar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_minuter_q2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="minuter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q2b"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Vet ej"/>
        </LinearLayout>

        <!-- Q3 -->
        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q3"/>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q3a"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_dagar_q3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="dagar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q3a"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ingen sådan aktivitet (hoppa över fråga 3b)"/>
        </LinearLayout>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q3b"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_timmar_q3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="timmar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_minuter_q3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="minuter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q3b"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Vet ej"/>
        </LinearLayout>

        <!-- Q4 -->
        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ipaq_q4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_timmar_q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="timmar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/ipaq_et_minuter_q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:fontFamily="monospace"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="minuter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <CheckBox
                android:id="@+id/ipaq_cb_q4"
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextCustomNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Vet ej"/>
        </LinearLayout>

        <Button
            android:id="@+id/ipaq_btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_spara"
            android:text="@string/done_button"
            android:textAppearance="@style/TextCustomNormal"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
